cmake_minimum_required(VERSION 3.17)

project(bernard)

SET(CMAKE_CXX_FLAGS "-Wall -std=c++17")
message("llvm " ${LLVM_BASE_DIR})

SET(LLVM_INC_DIR ${LLVM_BASE_DIR}/include)
SET(LLVM_LIB_DIR ${LLVM_BASE_DIR}/lib)

include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${LLVM_INC_DIR})
link_directories(${LLVM_LIB_DIR})

set(SRCs Scanner.cc
        Parser.h
        Parser.cc)

# i know it's stupid
set(LLVM_LIBs
        LLVMWindowsManifest
        LLVMXRay
        LLVMLibDriver
        LLVMDlltoolDriver
        LLVMTextAPIBinaryReader
        LLVMCoverage
        LLVMLineEditor
        LLVMXCoreDisassembler
        LLVMXCoreCodeGen
        LLVMXCoreDesc
        LLVMXCoreInfo
        LLVMX86TargetMCA
        LLVMX86Disassembler
        LLVMX86AsmParser
        LLVMX86CodeGen
        LLVMX86Desc
        LLVMX86Info
        LLVMWebAssemblyDisassembler
        LLVMWebAssemblyAsmParser
        LLVMWebAssemblyCodeGen
        LLVMWebAssemblyUtils
        LLVMWebAssemblyDesc
        LLVMWebAssemblyInfo
        LLVMVEDisassembler
        LLVMVEAsmParser
        LLVMVECodeGen
        LLVMVEDesc
        LLVMVEInfo
        LLVMSystemZDisassembler
        LLVMSystemZAsmParser
        LLVMSystemZCodeGen
        LLVMSystemZDesc
        LLVMSystemZInfo
        LLVMSparcDisassembler
        LLVMSparcAsmParser
        LLVMSparcCodeGen
        LLVMSparcDesc
        LLVMSparcInfo
        LLVMRISCVTargetMCA
        LLVMRISCVDisassembler
        LLVMRISCVAsmParser
        LLVMRISCVCodeGen
        LLVMRISCVDesc
        LLVMRISCVInfo
        LLVMPowerPCDisassembler
        LLVMPowerPCAsmParser
        LLVMPowerPCCodeGen
        LLVMPowerPCDesc
        LLVMPowerPCInfo
        LLVMNVPTXCodeGen
        LLVMNVPTXDesc
        LLVMNVPTXInfo
        LLVMMSP430Disassembler
        LLVMMSP430AsmParser
        LLVMMSP430CodeGen
        LLVMMSP430Desc
        LLVMMSP430Info
        LLVMMipsDisassembler
        LLVMMipsAsmParser
        LLVMMipsCodeGen
        LLVMMipsDesc
        LLVMMipsInfo
        LLVMLoongArchDisassembler
        LLVMLoongArchAsmParser
        LLVMLoongArchCodeGen
        LLVMLoongArchDesc
        LLVMLoongArchInfo
        LLVMLanaiDisassembler
        LLVMLanaiCodeGen
        LLVMLanaiAsmParser
        LLVMLanaiDesc
        LLVMLanaiInfo
        LLVMHexagonDisassembler
        LLVMHexagonCodeGen
        LLVMHexagonAsmParser
        LLVMHexagonDesc
        LLVMHexagonInfo
        LLVMBPFDisassembler
        LLVMBPFAsmParser
        LLVMBPFCodeGen
        LLVMBPFDesc
        LLVMBPFInfo
        LLVMAVRDisassembler
        LLVMAVRAsmParser
        LLVMAVRCodeGen
        LLVMAVRDesc
        LLVMAVRInfo
        LLVMARMDisassembler
        LLVMARMAsmParser
        LLVMARMCodeGen
        LLVMARMDesc
        LLVMARMUtils
        LLVMARMInfo
        LLVMAMDGPUTargetMCA
        LLVMAMDGPUDisassembler
        LLVMAMDGPUAsmParser
        LLVMAMDGPUCodeGen
        LLVMAMDGPUDesc
        LLVMAMDGPUUtils
        LLVMAMDGPUInfo
        LLVMAArch64Disassembler
        LLVMAArch64AsmParser
        LLVMAArch64CodeGen
        LLVMAArch64Desc
        LLVMAArch64Utils
        LLVMAArch64Info
        LLVMOrcDebugging
        LLVMOrcJIT
        LLVMWindowsDriver
        LLVMMCJIT
        LLVMJITLink
        LLVMInterpreter
        LLVMExecutionEngine
        LLVMRuntimeDyld
        LLVMOrcTargetProcess
        LLVMOrcShared
        LLVMDWP
        LLVMDebugInfoLogicalView
        LLVMDebugInfoGSYM
        LLVMOption
        LLVMObjectYAML
        LLVMObjCopy
        LLVMMCA
        LLVMMCDisassembler
        LLVMLTO
        LLVMFrontendOpenACC
        LLVMFrontendHLSL
        LLVMFrontendDriver
        LLVMExtensions
        Polly
        PollyISL
        LLVMPasses
        LLVMHipStdPar
        LLVMCoroutines
        LLVMCFGuard
        LLVMipo
        LLVMInstrumentation
        LLVMVectorize
        LLVMLinker
        LLVMFrontendOpenMP
        LLVMFrontendOffloading
        LLVMDWARFLinkerParallel
        LLVMDWARFLinkerClassic
        LLVMDWARFLinker
        LLVMGlobalISel
        LLVMMIRParser
        LLVMAsmPrinter
        LLVMSelectionDAG
        LLVMCodeGen
        LLVMTarget
        LLVMObjCARCOpts
        LLVMCodeGenTypes
        LLVMIRPrinter
        LLVMInterfaceStub
        LLVMFileCheck
        LLVMFuzzMutate
        LLVMScalarOpts
        LLVMInstCombine
        LLVMAggressiveInstCombine
        LLVMTransformUtils
        LLVMBitWriter
        LLVMAnalysis
        LLVMProfileData
        LLVMSymbolize
        LLVMDebugInfoBTF
        LLVMDebugInfoPDB
        LLVMDebugInfoMSF
        LLVMDebugInfoDWARF
        LLVMObject
        LLVMTextAPI
        LLVMMCParser
        LLVMIRReader
        LLVMAsmParser
        LLVMMC
        LLVMDebugInfoCodeView
        LLVMBitReader
        LLVMFuzzerCLI
        LLVMCore
        LLVMRemarks
        LLVMBitstreamReader
        LLVMBinaryFormat
        LLVMTargetParser
        LLVMTableGen
        LLVMSupport
        LLVMDemangle
)

add_executable(Scanner_Test Scanner_Test.cc Scanner.cc)
target_link_libraries(Scanner_Test gtest)

add_executable(Parser_Test Parser_Test.cc ${SRCs})
target_link_libraries(Parser_Test gtest ${LLVM_LIBs} tinfo)
